Fix home on mobile.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -13,7 +13,6 @@
   text-align: center;
   color: #777777;
   background-color: #202020;
-  height: 100%;
   width: 100%;
   padding: 10%;
 }
